--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
       
       <div class="credits">
         
-        My Resume | <a href="#">Vega Herliansyah</a>
+<!--         My Resume | <a href="#">Vega Herliansyah</a> -->
       </div>
     </div>
   </footer><!-- End  Footer -->
