--- a/inner-page.html
+++ b/inner-page.html
@@ -98,7 +98,7 @@
       </div>
       <div class="credits">
         
-         My Resume | <a href="#">Vega Herliansyah</a>
+<!--          My Resume | <a href="#">Vega Herliansyah</a> -->
       </div>
     </div>
   </footer><!-- End  Footer -->
