--- a/portfolio-detail2.html
+++ b/portfolio-detail2.html
@@ -134,7 +134,7 @@
      
       <div class="credits">
         
-         My Resume | <a href="#">Vega Herliansyah</a>
+<!--          My Resume | <a href="#">Vega Herliansyah</a> -->
       </div>
     </div>
   </footer><!-- End  Footer -->
