--- a/portfolio-detail3.html
+++ b/portfolio-detail3.html
@@ -138,7 +138,7 @@
       
       <div class="credits">
         
-         My Resume | <a href="#">Vega Herliansyah</a>
+<!--          My Resume | <a href="#">Vega Herliansyah</a> -->
       </div>
     </div>
   </footer><!-- End  Footer -->
