--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Vega Herliansyah. As a recently graduated Computer Engineering major of the Telkom University.<br/></p>
+          <p>My name is Vega Herliansyah. As a recently graduated Computer Engineering major of the Telkom University Bandung.<br/></p>
         </div>
 
         <div class="row">
