--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Vega - Portfolio</title>
+  <title>Vega Herliansyah - Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -69,7 +69,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Vega Herliansyah</h1>
-      <p>I'm <span class="typed" data-typed-items="Bachlor Degree in Computer Engineering"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Bachlor Degree in Computer Engineering eng ing eng"></span></p>
     </div>
   </section><!-- End Hero -->
 
